tests/baselines/reference/awaitUsingDeclarationsInForAwaitOf.3(target=esnext).errors.txt
awaitUsingDeclarationsInForAwaitOf.3.ts(5,23): error TS1123: Variable declaration list cannot be empty.
awaitUsingDeclarationsInForAwaitOf.3.ts(8,25): error TS1123: Variable declaration list cannot be empty.


==== awaitUsingDeclarationsInForAwaitOf.3.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/pull/55558#issuecomment-1817595357
    
    declare const x: any[]
    
    for await (await using of x);
                          
!!! error TS1123: Variable declaration list cannot be empty.
    
    export async function test() {
      for await (await using of x);
                            
!!! error TS1123: Variable declaration list cannot be empty.
    }
    